# scanner

./: .gitignore  .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml  todo
scanner/: __main__.py  analyse.py  classify.py  cli.py  features_data.py  gui.py  types.py  utils.py
scanner/extractors/capa/: capa_ex_injection.py  flare_capa.py
scanner/extractors/capa/_rules/pe_injection/: dll_injection.yml
scanner/extractors/checksums/: checksums.sh
scanner/extractors/classification/: classify.sh
scanner/extractors/entropy/: entropy.py  entropy_viz.py  shannon.py
scanner/extractors/entropy/_entropy/: __init__.py
scanner/extractors/hashes/: hashes.py
scanner/extractors/hashes/_ssdeep/: README.txt  ssdeep
scanner/extractors/identification/: file.sh
scanner/extractors/manalyze/: manalyze.sh
scanner/extractors/manalyze/_bin/: manalyze
scanner/extractors/pe/: authenticode.py  debug.py  exports.py  features.py  header.py  imports.py  imports_antidebug.py  imports_hash.py  imports_keyboard.py  imports_suspicious.py  packers.py  resources.py  rich_header.py  sections.py  stamps.py  subsystem.py  suspicious_imports.py  suspicious_modules.py  suspicious_sections.py
scanner/extractors/pe/_pe/: __init__.py  packers.py  rich_header.py
scanner/extractors/strings/: _strings.py  ascii.py  ascii.sh  domain_names.py  ipv4.py  stack_strings.sh  suspicious_antivirus_strings.py  suspicious_domain_names.py  suspicious_dos_stub_strings.py  suspicious_extensions_strings.py  suspicious_filenames.py  suspicious_fmt_strings.py  suspicious_folder_strings.py  suspicious_guid_strings.py  suspicious_oid_strings.py  suspicious_processes_strings.py  suspicious_protocols_strings.py  suspicious_registry_strings.py  suspicious_sandbox_strings.py  suspicious_sddl_strings.py  suspicious_sid_strings.py  suspicious_strings.py  suspicious_tld_strings.py  suspicious_user_agent_strings.py  tight_strings.sh  unicode.py  unicode.sh
scanner/extractors/vt/: by_hash.py
scanner/scripts/: test.py
scanner/static/scripts/: actions.js  dragndrop.js  modal.js  random.js
scanner/static/styles/: styles.css
scanner/templates/: analysis.html  base.html  index.html
scanner/tests/unit/: test_analyse.py  test_utils.py  utils.py
scripts/: vendorize.sh
slides/: slides.odp
(+9 files in other folders)
