[tool.poetry]
name = "scanner"
version = "0.2.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
scanner = "scanner.__main__:main"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"

# extractors dependencies
pefile = "^2022.5.30"
pdbparse = "^1.5"
lief = "^0.12.3"
colorama = "0.4.5"
flare-capa = "^5.0.0"
setuptools = "^67.6.1"
joblib = "^1.2.0"

[tool.poetry.dev-dependencies]
types-Flask = "^1.1.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
