[tool.poetry]
name = "scanner"
version = "0.2.2"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.scripts]
scanner = "scanner.__main__:main"
test = "scanner.scripts.test:test_unittest"
coverage = "scanner.scripts.test:test_coverage"

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.2.2"

# extractors dependencies
pefile = "^2023.2.7"
pdbparse = "^1.5"
lief = "0.15.1"
colorama = "^0.4.6"
flare-capa = "^7.0.0"
setuptools = "^67.6.1"
joblib = "^1.2.0"
vt-py = "^0.17.5"
pillow = "^10.0.0"
py-tlsh = "^4.7.2"
binwalk = "^2.1.0"

[tool.poetry.dev-dependencies]
types-Flask = "^1.1.6"
coverage = "^6.4.1"
mypy = "^0.971"

[tool.poetry.group.dev.dependencies]
pip = "^23.1.2"
pre-commit = "^3.3.3"

[tool.mypy]
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
